--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -524,7 +524,6 @@ header nav ul li a:focus {
 .activities_section h2 {
     margin-bottom: 15px;
     align-self: flex-start;
-    margin-left: 3%;
 }
 
 .activity_picture {
