--- a/assets/css/mobile-style.css
+++ b/assets/css/mobile-style.css
@@ -82,8 +82,7 @@ header nav ul li a:focus {
 /* SEARCH */
 
 .search {
-    margin-bottom: 0;
-    margin-top: 35px;
+    margin: 35px 5% 0px 5%;
 }
 
 .search h1 {
@@ -264,7 +263,7 @@ header nav ul li a:focus {
 .activity_picture img {
     object-fit: cover;
     height: 190px;
-    width: 324px;
+    width: 336px;
 }
 
 
